Cache and some Mobile-First UI related work is done

--- a/client/src/app/core/layout/right-side-bar/right-side-bar.component.scss
+++ b/client/src/app/core/layout/right-side-bar/right-side-bar.component.scss
@@ -13,4 +13,10 @@ a{
   text-decoration: none;
 }
 
+.tech-primary-color{
+  color: $main-color;
+}
+.tech-secondary-color{
+  color: darkgray;
+}
 
