--- a/client/src/app/core/layout/right-side-bar/right-side-bar.component.html
+++ b/client/src/app/core/layout/right-side-bar/right-side-bar.component.html
@@ -7,7 +7,7 @@
     <mat-card-header style="margin-top: -30px;margin-bottom: -30px;margin-left: -35px;">
       <div class="tech-right-card-item">
         <mat-card-title style="font-size: 14px;">
-          <a [routerLink]="['./blog', blog?._id]">
+          <a [routerLink]="['/blog', blog?._id]">
             <h5 class="tech-primary-color">
               <i class="fa fa-question-circle"></i>
               {{blog?.title}}
@@ -31,7 +31,7 @@
     <mat-card-header style="margin-top: -30px;margin-bottom: -30px;margin-left: -35px;">
       <div class="tech-right-card-item">
         <mat-card-title style="font-size: 14px;">
-          <a [routerLink]="['./question', question?._id]">
+          <a [routerLink]="['/question', question?._id]">
             <h5 class="tech-primary-color">
               <i class="fa fa-question-circle"></i>
               {{question?.title}}
